--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,12 +1,13 @@
-/*
-  Специально для тёмной темы при наличии класса,
-  здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-
 :root.theme-dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --bg-color: #000028;
+  --bg-image: url('../images/cover-image-dark.png');
+  --accent-color: #ff0070;
+  --text-color: #f1b2ce;
+  --title-color: #ff0070;
+  --decor-text: #000028;
+  --main-title-color: #db00ff;
+  --main-title-shadow: #ff0070;
+  --border-color: #ff0070;
+  --button-hover-border: rgba(255, 0, 112, 0.4);
+  --rec-display: block;
 }
