--- a/styles/light.css
+++ b/styles/light.css
@@ -1,12 +1,29 @@
-/*
-  Специально для светлой темы при наличии класса.
-  Здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-
 :root.theme-light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --bg-color: #fff1f7;
+  --bg-image: url('../images/cover-image-light.png');
+  --accent-color: #ff8dcb;
+  --text-color: #353430;
+  --title-color: #353430;
+  --decor-text: #353430;
+  --main-title-color: #ffc2e6;
+  --main-title-shadow: #ff8dcb;
+  --border-color: #353430;
+  --button-hover-border: rgba(53, 52, 48, 0.4);
+  --rec-display: none;
+}
+
+@media (prefers-color-scheme: light) {
+  :root:not(.theme-dark):not(.theme-light) {
+    --bg-color: #fff1f7;
+    --bg-image: url('../images/cover-image-light.png');
+    --accent-color: #ff8dcb;
+    --text-color: #353430;
+    --title-color: #353430;
+    --decor-text: #353430;
+    --main-title-color: #ffc2e6;
+    --main-title-shadow: #ff8dcb;
+    --border-color: #353430;
+    --button-hover-border: rgba(53, 52, 48, 0.4);
+    --rec-display: none;
+  }
 }
