--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,4 +1,13 @@
-/*
-  Переменные для вашего проекта
-  и их переопределение под различные устройства
-*/
+:root {
+  --bg-color: #000028;
+  --bg-image: url('../images/cover-image-dark.png');
+  --accent-color: #ff0070;
+  --text-color: #f1b2ce;
+  --title-color: #ff0070;
+  --decor-text: #000028;
+  --main-title-color: #db00ff;
+  --main-title-shadow: #ff0070;
+  --border-color: #ff0070;
+  --button-hover-border: rgba(255, 0, 112, 0.4);
+  --rec-display: block;
+}
