--- a/styles/style.css
+++ b/styles/style.css
@@ -70,7 +70,7 @@
 }
 
 .header__theme-menu {
-  margin-top: 65px;
+  margin-top: 0px;
 }
 
 .header__theme-menu-list {
@@ -200,6 +200,22 @@
   object-fit: cover;
   object-position: center;
 }
+
+.gallery__item:nth-child(1) {
+    grid-row: 1;
+  }
+  .gallery__item:nth-child(2) {
+    grid-row: 2;
+  }
+  .gallery__item:nth-child(3) {
+    grid-row: 4;
+  }
+  .gallery__item:nth-child(4) {
+    grid-row: 5;
+  }
+  .gallery__item:nth-child(5) {
+    grid-row: 3;
+  }
 
 .footer {
   align-items: center;
