--- a/styles/style.css
+++ b/styles/style.css
@@ -19,9 +19,8 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   min-height: 100vh;
-  padding: 10px 0;
 }
 
 .decorated-zone::before,
@@ -70,7 +69,10 @@
 }
 
 .header__theme-menu {
-  margin-top: 40px;
+  position: absolute;
+  top: 75px;                  
+  right: 10px;                 
+  margin-top: 0;              
 }
 
 .header__theme-menu-list {
@@ -111,17 +113,25 @@
   text-shadow: 4px 4px 0 var(--main-title-shadow);
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   line-height: 0.825;
-  margin: 80px 0 0;
+  margin: 238px 0 0;
 }
 
 .header__description {
-  margin-block-start: 55px;
+  margin-block-start: 151px;
   max-inline-size: 100%;
   align-self: flex-end;
 }
 
+.section:first-of-type {
+  margin-top: 40px;
+}
+
 .section {
   margin: 50px 0;
+}
+
+section:last-of-type {
+  margin-bottom: 40px;
 }
 
 .section__title {
@@ -191,7 +201,7 @@
 .gallery {
   display: grid;
   gap: 10px;
-  margin-top: 20px;
+  grid-template-rows: 142px 355px 355px 237px 237px;
 }
 
 .gallery__item {
