--- a/styles/style.css
+++ b/styles/style.css
@@ -70,9 +70,9 @@
 
 .header__theme-menu {
   position: absolute;
-  top: 75px;                 
-  right: 10px;         
-  margin-top: 0;   
+  top: 75px;
+  right: 10px;
+  margin-top: 0;
 }
 
 .header__theme-menu-list {
@@ -117,9 +117,10 @@
 }
 
 .header__description {
-  margin-block-start: 151px;
+  margin-block-start: 55px;
   max-inline-size: 100%;
   align-self: flex-end;
+  width: 355px;
 }
 
 .section:first-of-type {
