--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,7 @@
   font-family: 'IBM Plex Mono', monospace;
   font-size: 18px;
   line-height: 1.3;
-  padding: 0 10px;
+  padding: 0 0;
 }
 
 .header,
@@ -21,6 +21,7 @@
   flex-direction: column;
   justify-content: flex-start;
   min-height: 100vh;
+  margin: 0 10px;
 }
 
 .decorated-zone::before,
@@ -40,7 +41,7 @@
 }
 
 .decorated-zone::after {
-  bottom: 0px;
+  bottom: 10px;
   left: 0px;
   border-width: 0 0 1px 1px;
 }
@@ -113,7 +114,7 @@
   text-shadow: 4px 4px 0 var(--main-title-shadow);
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   line-height: 0.825;
-  margin: 238px 0 0;
+  margin: 248px 0 0;
 }
 
 .header__description {
@@ -121,6 +122,10 @@
   max-inline-size: 100%;
   align-self: flex-end;
   width: 355px;
+}
+
+.main {
+  margin: 0 10px;
 }
 
 .section:first-of-type {
