--- a/styles/style.css
+++ b/styles/style.css
@@ -250,18 +250,28 @@ section:last-of-type {
 }
 
 @media (width >= 768px) {
-  .page {
-    padding: 0 20px;
+
+  .header {
+    margin: 0;
   }
+
+  .header__theme-menu {
+  position: absolute;
+  top: 192px;
+  right: 10px;
+  margin-top: 0;
+}
 
   .header__title {
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-    margin: 70px 0 0;
+    margin: 463px 0 0;
   }
 
   .header__description {
-    max-inline-size: 50%;
-    margin-block-start: 70px;
+    max-inline-size: calc(50% - 20px);
+    margin-block-start: 162px;
+    margin-block-end: 243px;
+    margin-inline-end: 20px;
   }
 
   .section--what .section__title {
