--- a/styles/style.css
+++ b/styles/style.css
@@ -269,7 +269,7 @@ section:last-of-type {
 
   .header__description {
     max-inline-size: calc(50% - 20px);
-    margin-block-start: 162px;
+    margin-block-start: 152px;
     margin-block-end: 203px;
     margin-inline-end: 20px;
   }
@@ -279,7 +279,7 @@ section:last-of-type {
   }
 
   .section {
-    margin: 80px 0;
+    margin: 80px 0px;
   }
 
   .section--why .section__title {
