--- a/styles/style.css
+++ b/styles/style.css
@@ -299,7 +299,7 @@ section:last-of-type {
   }
 
   .section--what .section__cards .card .card__text {
-    padding-right: 20px;
+    padding-right: 25px;
   }
 
   .section:not(.section--gallery) .section__title {
@@ -336,20 +336,20 @@ section:last-of-type {
 
   .gallery {
     grid-template-columns: 1fr 1fr 1fr;
-    grid-auto-rows: minmax(100px, auto);
+    grid-template-rows: 1fr 1fr 1fr;
     gap: 20px;
   }
 
   .gallery__item:nth-child(1) {
     grid-column: 1 / 3;
-    grid-row: 1;
+    grid-row: 1 / 2;
   }
   .gallery__item:nth-child(2) {
-    grid-column: 3;
+    grid-column: 3 / 4;
     grid-row: 1 / 3;
   }
   .gallery__item:nth-child(3) {
-    grid-column: 2;
+    grid-column: 2 / 3;
     grid-row: 2 / 3;
   }
   .gallery__item:nth-child(4) {
