--- a/styles/style.css
+++ b/styles/style.css
@@ -405,28 +405,29 @@ section:last-of-type {
   }
 
   .gallery {
-    grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: minmax(100px, auto);
+    grid-template-columns: 315px 315px 314px;
+    grid-template-rows: 260px 315px 433px;
+    gap: 20px;
   }
 
   .gallery__item:nth-child(1) {
-    grid-column: span 2;
-    grid-row: span 1;
+    grid-column: 1 / 3;
+    grid-row: 1 / 2;
   }
   .gallery__item:nth-child(2) {
-    grid-column: 3;
-    grid-row: span 2;
+    grid-column: 3 / 4;
+    grid-row: 1 / 3;
   }
   .gallery__item:nth-child(3) {
-    grid-column: 1;
-    grid-row: span 2;
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
   }
   .gallery__item:nth-child(4) {
-    grid-column: 2;
-    grid-row: 2;
+    grid-column: 2 / 4;
+    grid-row: 3 / 4;
   }
   .gallery__item:nth-child(5) {
-    grid-column: 2 / span 2;
-    grid-row: 3;
+    grid-column: 1;
+    grid-row: 2 / 4;
   }
 }
