--- a/styles/style.css
+++ b/styles/style.css
@@ -16,12 +16,24 @@
 
 .header,
 .footer {
+  height: 100vh;
+  min-height: 668px;
   position: relative;
+}
+
+.header {
+  display: grid;
+  grid-template-rows: 1fr min-content 1fr;
+  align-items: start;
+  padding: 0 10px;
+}
+
+.footer {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  min-height: 100vh;
-  margin: 0 10px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 .decorated-zone::before,
@@ -70,17 +82,17 @@
 }
 
 .header__theme-menu {
-  position: absolute;
-  top: 75px;
-  right: 10px;
-  margin-top: 0;
+  grid-row: 1;
+  justify-self: end;
+  align-self: center;
+  margin-top: 5px;
 }
 
 .header__theme-menu-list {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  gap: 10px;
+  gap: 13px;
 }
 
 .header__theme-menu-button {
@@ -110,18 +122,22 @@
 }
 
 .header__title {
+  grid-row: 2;
   color: var(--main-title-color);
   text-shadow: 4px 4px 0 var(--main-title-shadow);
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   line-height: 0.825;
-  margin: 248px 0 0;
+  margin: 0;
 }
 
 .header__description {
-  margin-block-start: 45px;
+  grid-row: 3;
+  align-self: center;
   max-inline-size: 100%;
-  align-self: flex-end;
   width: 355px;
+  margin-block-start: 0;
+  margin-block-end: 12px;
+  margin-inline-end: 0;
 }
 
 .main {
