--- a/styles/style.css
+++ b/styles/style.css
@@ -136,7 +136,7 @@
   max-inline-size: 100%;
   width: 355px;
   margin-block-start: 0;
-  margin-block-end: 12px;
+  margin-block-end: 27px;
   margin-inline-end: 0;
 }
 
@@ -145,7 +145,7 @@
 }
 
 .section:first-of-type {
-  margin-top: 40px;
+  margin-top: 30px;
 }
 
 .section {
@@ -177,6 +177,7 @@ section:last-of-type {
 
 .section__subtitle {
   font-weight: bold;
+  font-size: 18px;
   background-color: var(--accent-color);
   color: var(--decor-text);
   padding: 0 2px;
