--- a/styles/style.css
+++ b/styles/style.css
@@ -388,11 +388,10 @@ section:last-of-type {
 @media (width >= 1024px) {
 
   .header__theme-menu {
-    margin-top: 0;
-    position: absolute;
-    top: 20px;
-    left: 50%;
-    transform: translateX(-50%);
+    margin-top: 20px;
+    margin-left: 20px;
+    justify-self: center;
+    align-self: start;
   }
 
   .header__theme-menu-list {
