--- a/styles/style.css
+++ b/styles/style.css
@@ -238,20 +238,24 @@ section:last-of-type {
 }
 
 .gallery__item:nth-child(1) {
-    grid-row: 1;
-  }
-  .gallery__item:nth-child(2) {
-    grid-row: 2;
-  }
-  .gallery__item:nth-child(3) {
-    grid-row: 4;
-  }
-  .gallery__item:nth-child(4) {
-    grid-row: 5;
-  }
-  .gallery__item:nth-child(5) {
-    grid-row: 3;
-  }
+  grid-row: 1;
+}
+
+.gallery__item:nth-child(2) {
+  grid-row: 2;
+}
+
+.gallery__item:nth-child(3) {
+  grid-row: 4;
+}
+
+.gallery__item:nth-child(4) {
+  grid-row: 5;
+}
+
+.gallery__item:nth-child(5) {
+  grid-row: 3;
+}
 
 .footer__title {
   color: var(--main-title-color);
@@ -317,7 +321,9 @@ section:last-of-type {
   .section--gallery .section__title {
     margin-bottom: 20px;
   }
-  .section:not(.section--gallery):not(.section--what) {
+
+  .section--why,
+  .section--tips {
     display: grid;
     grid-template-columns: 1fr 2fr;
     align-items: start;
@@ -326,11 +332,13 @@ section:last-of-type {
   .section:not(.section--gallery) .section__title {
     margin-bottom: 0;
   }
+
   .section__subtitle {
     grid-column: 2;
     grid-row: 1;
     margin-bottom: 0;
   }
+
   .section:not(.section--gallery):not(.section--what) .section__cards {
     display:flex;
     flex-direction: column;
@@ -367,18 +375,22 @@ section:last-of-type {
     grid-column: 1 / 3;
     grid-row: 1 / 2;
   }
+
   .gallery__item:nth-child(2) {
     grid-column: 3 / 4;
     grid-row: 1 / 3;
   }
+
   .gallery__item:nth-child(3) {
     grid-column: 2 / 3;
     grid-row: 2 / 3;
   }
+
   .gallery__item:nth-child(4) {
     grid-column: 2 / 4;
     grid-row: 3 / 4;
   }
+
   .gallery__item:nth-child(5) {
     grid-column: 1;
     grid-row: 2 / 4;
@@ -386,7 +398,6 @@ section:last-of-type {
 }
 
 @media (width >= 1024px) {
-
   .header__theme-menu {
     margin-top: 20px;
     margin-left: 20px;
@@ -420,12 +431,12 @@ section:last-of-type {
     flex-direction: column;
   }
 
-  .section:not(.section--gallery):not(.section--what):not(.section--tips) {
+  .section--why {
     grid-template-columns: 295px 666px;
     gap: 25px;
   }
 
-  .section:not(.section--gallery):not(.section--what):not(.section--why) {
+  .section--tips {
     grid-template-columns: 310px 662px;
     gap: 10px;
   }
@@ -444,18 +455,22 @@ section:last-of-type {
     grid-column: 1 / 3;
     grid-row: 1 / 2;
   }
+
   .gallery__item:nth-child(2) {
     grid-column: 3 / 4;
     grid-row: 1 / 3;
   }
+
   .gallery__item:nth-child(3) {
     grid-column: 2 / 3;
     grid-row: 2 / 3;
   }
+
   .gallery__item:nth-child(4) {
     grid-column: 2 / 4;
     grid-row: 3 / 4;
   }
+  
   .gallery__item:nth-child(5) {
     grid-column: 1;
     grid-row: 2 / 4;
