--- a/styles/style.css
+++ b/styles/style.css
@@ -416,7 +416,8 @@ section:last-of-type {
   }
 
   .main {
-    margin-top: 20px;
+    max-width: 1024px;
+    margin: 20px auto;
   }
 
   .section--what .section__cards {
@@ -429,6 +430,11 @@ section:last-of-type {
   .section--tips .section__cards {
     display: flex;
     flex-direction: column;
+  }
+
+  .section {
+    margin-left: 20px;
+    margin-right: 20px;
   }
 
   .section--why {
